--- a/resources/views/templates/partials/flash.twig
+++ b/resources/views/templates/partials/flash.twig
@@ -1,6 +1,6 @@
 
 
-{# {% set alerts = ['success','info','warning','danger'] %}
+{% set alerts = ['success','info','warning','danger'] %}
 
 {% for type in alerts %}
  {% if flash.getMessage(type) %}
@@ -11,21 +11,4 @@
    </div>
   {% endfor %}
  {% endif %}
-{% endfor %}﻿ #}
-
-{% if flash.getMessage('info') %}
-
-	<div class='alert alert-info'>
-		{{ flash.getMessage('info') | first }}
-	</div>
-
-{% endif %}
-
-
-{% if flash.getMessage('error') %}
-
-	<div class='alert alert-danger'>
-		{{ flash.getMessage('error') | first }}
-	</div>
-
-{% endif %}
+{% endfor %}﻿
